Fix footer alignment

--- a/DiceRoller/diceroller.css
+++ b/DiceRoller/diceroller.css
@@ -73,3 +73,7 @@ ul {
     margin-right:1%;
 }
 
+body {
+    font-family:Verdana;
+}
+}
